--- a/src/styles/form.module.css
+++ b/src/styles/form.module.css
@@ -6,15 +6,30 @@
 }
 
 .back {
-  justify-self: flex-end;
+  display: flex;
+  align-items: center;
+  color: var(--primary-color);
+  cursor: pointer;
   font-weight: 500;
-  font-size: 1rem;
+
+  > span {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+.backIcon {
+  width: 20px;
+  height: 20px;
+  color: var(--primary-color);
+  text-align: center;
 }
 
 .title {
   font-size: inherit;
-  font-weight: 500;
-  margin-block: 4em 3em;
+  font-weight: 600;
+  margin-block: 2em;
   text-align: center;
 }
 
@@ -29,7 +44,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1.5em;
+  gap: 1.2em;
 }
 
 .inputContainer {
